<resources>
    <string name="app_name">slidysim</string>
    <string name="_15puzzle">15PUZZLE</string>
    <string name="scramble">SCRAMBLE!</string>
    <string name="solve">SOLVE!</string>
    <string name="about">About</string>
    <string name="game">Game</string>
    <string name="results">Results</string>
    <string name="reset">RESET</string>
    <string name="base">Base on lz1998</string>
    <string name="author">By cubercsl</string>
    <string name="qq">QQ: 944293977</string>
</resources>
