<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3c500"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_15puzzle"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square10"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square11"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square12"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square13"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square14"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

            <cn.cubercsl.slidysim.game.SquareView
                android:id="@+id/square15"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />
        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/moveView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/scramble"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#5babe6"
                android:gravity="center"
                android:text="@string/scramble" />

            <Button
                android:id="@+id/solve"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/solve" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
